--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li ><a href="index.html">Home</a></li>
+                        <li class="current"><a href="about.html">About</a></li>
                         <li><a href="publication.html">Publication</a></li>
                     </ul>
                 </nav>
@@ -34,30 +34,16 @@
 
         <section id="boxes">
                 <div class="container">
-                    <div class="box">
-                        <img src="./images/Vr.png" width="50" height="50" >
-                        <h3> Stars Radial Velocity </h3>
+                    <div class="profile">
+                        <h2> Founder </h2>
+                        <img src="./images/profile.jpg" width="170" height="200" >
+                        <h3> Salman Al Farisi </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. 
+                            Department of Astronomy, Insitut Teknologi Bandung <br>
+                            Research in galactic physics and computational astrophysics
                         </p>
                     </div>
-
-                    <div class="box">
-                            <img src="./images/metal.png" width="50" height="50" >
-                            <h3> Stars Metallicity </h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. 
-                            </p>
-                    </div>
-
-                        <div class="box">
-                                <img src="./images/cluster.png" width="50" height="50" >
-                                <h3> Clusters </h3>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Dolor sed viverra ipsum nunc aliquet bibendum enim. In massa tempor nec feugiat. 
-                                </p>
-                        </div>
-                </div>
+             </div>
         </section>
 
         <footer>
