--- a/publication.html
+++ b/publication.html
@@ -18,9 +18,9 @@
                 </div>
                 <nav>
                     <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="publication.html">Publication</a></li>
+                        <li class="current"><a href="publication.html">Publication</a></li>
                     </ul>
                 </nav>
             </div>
