--- a/about.html
+++ b/about.html
@@ -41,6 +41,9 @@
                         <p>
                             Department of Astronomy, Insitut Teknologi Bandung <br>
                             Research in galactic physics and computational astrophysics
+                            <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
+
                         </p>
                     </div>
              </div>
