--- a/about.html
+++ b/about.html
@@ -42,8 +42,7 @@
                         <p>
                             Department of Astronomy, Insitut Teknologi Bandung <br>
                             Research in galactic physics and computational astrophysics
-
-
+                            <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="salman-al-farisi-37324a106"><a class="LI-simple-link" href='https://id.linkedin.com/in/salman-al-farisi-37324a106?trk=profile-badge'>Salman Al Farisi</a></div>
 
                         </p>
                     </div>
