--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li class="current"><a href="about.html">About</a></li>
                         <li><a href="publication.html">Publication</a></li>
                     </ul>
                 </nav>
