oh man I hate CSS. fck frontend works

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <header class="section-header">
           <h3>About Me</h3>
-          <p style="text-align:center;"><img src="images/pics.jpg" alt="img" class="center" width="150"></p>
+          <p style="text-align:center;"><img src="images/pics.jpg" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
           	I am studying at Department of Astronomy, Institut Teknologi Bandung. 
           	<br><br>
