--- a/index.html
+++ b/index.html
@@ -100,16 +100,23 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.JPG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
-          	I am studying at Department of Astronomy, Institut Teknologi Bandung. 
+          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. On this time, I am on involvement for assisting researches in galactic physics group and be a good teaching assistant.
           	<br><br>
-          	While on my study, I do several activities for the purpose of fun and seeking the meaning of my life. 
+          	While in my study, I do several activities for fun and seeking the meaning of my life.
           	<ul>
+          	<li>Be a researcher at Jakarta Machine Learning community. </li>
           	<li>Leading a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
           	<li>Play basketball and football. </li>
-          	<li>Participate at college robotics team, humanoid robot division. Won the national third prize at 2018. </li>
-          	<li>Participate at hackathon! </li>
-          	<li>Developing some random stuffs! (mainly using machine learning)</li>
+          	<li>Participate in college robotics team, humanoid robot division. Won the national third prize at 2018. </li>
+          	<li>Participate in hackathons! </li>
+          	<li>Developing some random kinds of stuff!! (mainly using machine learning)</li>
+          	<li>Astronomy public outreach (as telescope dude).</li>
+          	<li>Teach coding.</li>
+          	<li>Participate in competitive programming competitions related to ACM-ICPC (sadly never escaping regionals).</li>
+          	<li>Participate in Kaggle competitions (Top 9% at Categorical Feature Encoding Challenge II, 46% at Abstraction and Reasoning Challenge, ranked master for notebooks).</li>
           	</ul>
+
+
           </p>
 
         </header>
