--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </div>
               <h2 class="title"><a href="#">Plan</a></h2>
               <p style="text-align:center;">
-                Going to get PhD and working for observatory. 
+                Going to get PhD and working for observatory. Explore more universe, push the boundary. 
               </p>
             </div>
           </div>
