--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </p>
 
         </header>
-
+<!--
         <div class="row about-cols">
 
           <div class="col-md-4 wow fadeInUp">
@@ -166,7 +166,8 @@
         </div>
 
       </div>
-    </section><!-- #about -->
+    </section>
+	-->
 
   
 
