--- a/index.html
+++ b/index.html
@@ -100,22 +100,38 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.JPG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
-          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. On this time, I am on involvement for assisting researches in galactic physics group and be a good teaching assistant.
+          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. On this time, I am involved in galactic physics research and as teaching assistant.
           	<br><br>
-          	While in my study, I do several activities for fun and seeking the meaning of my life.
+          	Experience is key to be a better me. Here are some of them. 
+          	<ul>
+          	<li>Researcher at Jakarta Machine Learning (Ongoing, voluntary activity)</li>
+          	<li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
+          	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
+          	<li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
+          	</ul>
+          	<br><br>
+          	Besides, I did several activities for fun and seeking the meaning of my life.
           	<ul>
           	<li>Be a researcher at Jakarta Machine Learning community. </li>
           	<li>Leading a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
           	<li>Play basketball and football. </li>
-          	<li>Participate in college robotics team, humanoid robot division. Won the national third prize at 2018. </li>
+          	<li>Participate in college robotics team, humanoid robot division.</li>
           	<li>Participate in hackathons! </li>
           	<li>Developing some random kinds of stuff!! (mainly using machine learning)</li>
           	<li>Astronomy public outreach (as telescope dude).</li>
           	<li>Teach coding.</li>
           	<li>Participate in competitive programming competitions related to ACM-ICPC (sadly never escaping regionals).</li>
-          	<li>Participate in Kaggle competitions (Top 9% at Categorical Feature Encoding Challenge II, 46% at Abstraction and Reasoning Challenge, ranked master for notebooks).</li>
+          	<li>Participate in Kaggle machine learning competitions.</li>
           	</ul>
-
+          	<br><br>
+          	Behold, fortunately I won (or got decent result) at some of competitions or been an awardee.
+          	<ul>
+          	<li>Top 9% at Categorical Encoding Challenge II Kaggle</li>
+          	<li>3rd prize of Indonesia Robotics Contest, national stage, Humanoid Division, 2018.</li>
+          	<li>3rd prize of Indonesia Robotics Contest, regional stage, Humanoid Division, 2018.</li>
+          	<li>Indosat Ooredo IDCamp 2020 scholarship awardee, machine learning developer category. </li>
+          	<li>
+          	<li>
 
           </p>
 
