--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.JPG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
-          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. On this time, I am involved in galactic physics research and as teaching assistant.
+          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. Spent a summer at Princeton University Physics of Life Summer School. On this time, I am involved in galactic physics research and as teaching assistant. 
           	<br><br>
           	Experience is key to be a better me. Here are some of them. 
           	<ul>
@@ -127,11 +127,11 @@
           	Behold, fortunately I won (or got decent result) at some of competitions or been an awardee.
           	<ul>
           	<li>Top 9% at Categorical Encoding Challenge II Kaggle</li>
-          	<li>3rd prize of Indonesia Robotics Contest, national stage, Humanoid Division, 2018.</li>
-          	<li>3rd prize of Indonesia Robotics Contest, regional stage, Humanoid Division, 2018.</li>
-          	<li>Indosat Ooredo IDCamp 2020 scholarship awardee, machine learning developer category. </li>
-          	<li>
-          	<li>
+          	<li>Indosat Ooredo IDCamp 2020 scholarship awardee, machine learning developer track. </li>
+          	<li>3rd prize of Indonesia Robotics Contest, national stage humanoid division 2018.</li>
+          	<li>3rd prize of Indonesia Robotics Contest, regional stage humanoid Division 2018.</li>
+          	<li>The New Rising Star : An Award for Enhancement in Academic Achievement 2018</li>li>
+          	<li>2nd Prize of National Science Olympiad, regional stage 2013</li>
 
           </p>
 
