--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           	<li>Indosat Ooredo IDCamp 2020 scholarship awardee, machine learning developer track. </li>
           	<li>3rd prize of Indonesia Robotics Contest, national stage humanoid division 2018.</li>
           	<li>3rd prize of Indonesia Robotics Contest, regional stage humanoid Division 2018.</li>
-          	<li>The New Rising Star : An Award for Enhancement in Academic Achievement 2018</li>li>
+          	<li>The New Rising Star : An Award for Enhancement in Academic Achievement 2018</li>
           	<li>2nd Prize of National Science Olympiad, regional stage 2013</li>
 
           </p>
