--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.JPG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
-          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. Spent a summer at Princeton University Physics of Life Summer School. On this time, I am involved in galactic physics research and as teaching assistant. 
+          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. Now spending a summer at Princeton University Physics of Life Summer School, assisting in galactic physics research and as teaching assistant. 
           	<br><br>
           	Experience is key to be a better me. Here are some of them. 
           	<ul>
