--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p style="text-align:left;">Hi! I am Salman. 
           	I am studying at the Department of Astronomy, Institut Teknologi Bandung. Now spending a summer at Princeton University Physics of Life Summer School, assisting in galactic physics research and as teaching assistant. 
           	<br><br>
-          	Experience is key to be a better me. Here are some of them. 
+          	Experience is key to be a better version of mine. Here are some of them. 
           	<ul>
           	<li>Researcher at Jakarta Machine Learning (Ongoing, voluntary activity)</li>
           	<li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
