--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Me</a></li>
           <li><a href="#portfolio">Projects</a></li>
+          <li><a href="#writings">Writings</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -100,30 +101,38 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.JPG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
-          	I am studying at the Department of Astronomy, Institut Teknologi Bandung. Now spending a summer at Princeton University Physics of Life Summer School, assisting in galactic physics research and as teaching assistant. 
+          	I am a final year undergraduate at the Department of Astronomy, Institut Teknologi Bandung. At this moment, I am into galactic physics research and as teaching assistant. A good description of me: a box-to-box person, I want to learn anything.
           	<br><br>
-          	Experience is key to be a better version of mine. Here are some of them. 
+          	<h4>Experiences</h4>
+          	Experience is key to upgrade myself. Here are some of them. 
           	<ul>
-          	<li>Researcher at Jakarta Machine Learning (Ongoing, voluntary activity)</li>
+          	<li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
           	<li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
           	<li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
           	</ul>
           	<br><br>
-          	Besides, I did several activities for fun and seeking the meaning of my life.
+          	<h4>Current Researches</h4>
           	<ul>
-          	<li>Be a researcher at Jakarta Machine Learning community. </li>
+          	<li>The use of Convolutional Neural Network (CNN) for SDSS APOGEE Stellar Parameter Analysis. </li>
+          	<li>Galaxy Zoo: A public outreach to introduce galaxy classification to community. </li>
+          	<li>The use of Deep Learning for GAIA-Besancon Galaxy Population. </li>
+          	<li>The use of machine learning for Be Star spectra analysis.</li>
+          </ul>
+          	<br><br>
+          	<h4>Activities</h4>
+          	I did several activities for fun and seeking the meaning of my life.
+          	<ul>
+          	<li>Researcher at Jakarta Machine Learning community. </li>
           	<li>Leading a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
-          	<li>Play basketball and football. </li>
-          	<li>Participate in college robotics team, humanoid robot division.</li>
-          	<li>Participate in hackathons! </li>
-          	<li>Developing some random kinds of stuff!! (mainly using machine learning)</li>
-          	<li>Astronomy public outreach (as telescope dude).</li>
-          	<li>Teach coding.</li>
-          	<li>Participate in competitive programming competitions related to ACM-ICPC (sadly never escaping regionals).</li>
-          	<li>Participate in Kaggle machine learning competitions.</li>
+          	<li>Play basketball and football (I play as forward for both). </li>
+          	<li>Participating in college robotics team, humanoid robot division.</li>
+          	<li>Developing some random kinds of stuff</li>
+          	<li>Astronomy public outreach (as the cool telescope dude).</li>
+          	<li>A kaggler, expert ranked</li>
           	</ul>
           	<br><br>
+          	<h4>Achievements</h4>
           	Behold, fortunately I won (or got decent result) at some of competitions or been an awardee.
           	<ul>
           	<li>Top 9% at Categorical Encoding Challenge II Kaggle</li>
@@ -132,6 +141,7 @@
           	<li>3rd prize of Indonesia Robotics Contest, regional stage humanoid Division 2018.</li>
           	<li>The New Rising Star : An Award for Enhancement in Academic Achievement 2018</li>
           	<li>2nd Prize of National Science Olympiad, regional stage 2013</li>
+
 
           </p>
 
@@ -348,6 +358,167 @@
 
         </div>
 
+      </div>
+    </section><!-- #portfolio -->
+
+    <section id="writings"  class="section-bg" >
+      <div class="container">
+
+        <header class="section-header">
+          <h3 class="section-title">Writings</h3>
+        </header>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-ast">Astronomy & Astrophysics</li>
+              <li data-filter=".filter-ml">Machine Learning Development</li>
+              <li data-filter=".filter-se">Software Engineering</li>
+              <li data-filter=".filter-exp">Exploitation Reports (Coming Soon)</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container">
+        	<!--
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ast wow fadeInUp">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/hubbletuning.jpeg" class="img-fluid" alt="">
+                <a href="images/hubbletuning.jpeg" data-lightbox="portfolio" data-title="Galaxy Zoo Classifier" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/Galaxy-Zoo-CNN" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/Galaxy-Zoo-CNN">Galaxy Zoo Classifier</a></h4>
+                <p>Astronomy & Astrophysics</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ast wow fadeInUp" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/ligo.jpg" class="img-fluid" alt="">
+                <a href="images/ligo.jpg" class="link-preview" data-lightbox="portfolio" data-title="GravWave CNN" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/GravWave-CNN" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/GravWave-CNN">GravWave CNN</a></h4>
+                <p>Astronomy & Astrophysics</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/grizz.png" class="img-fluid" alt="">
+                <a href="images/grizz.png" class="link-preview" data-lightbox="portfolio" data-title="Backyard-Painting" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/Backyard-Painting" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/Backyard-Painting">Backyard Painting</a></h4>
+                <p>Machine Learning</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml wow fadeInUp">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/goyoubi.png" class="img-fluid" alt="">
+                <a href="https://github.com/salmanhiro/goyoubi" class="link-preview" data-lightbox="portfolio" data-title="Goyoubi" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/goyoubi" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="#">Goyoubi (On Development)</a></h4>
+                <p>Machine Learning Library</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-se wow fadeInUp" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/programming.jpg" class="img-fluid" alt="" width="400" height="350">
+                <a href="images/programming.jpg" class="link-preview" data-lightbox="portfolio" data-title="CP Solution" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/repo-CP-salman" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/repo-CP-salman">Competitive Programming</a></h4>
+                <p>Competitive Programming Solution</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-se wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/random.jpg" class="img-fluid" alt="">
+                <a href="images/random.jpg" class="link-preview" data-lightbox="portfolio" data-title="randomfy" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://t.me/RandomfyBot" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://t.me/RandomfyBot">Randomfy Bot</a></h4>
+                <p>Software Engineering</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml wow fadeInUp">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/anteater.jpg" class="img-fluid" alt="" width="500">
+                <a href="images/anteater.jpg" class="link-preview" data-lightbox="portfolio" data-title="anteater" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/Ant-and-Anteater-Classifier" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/Ant-and-Anteater-Classifier">Ant and Anteater Classifier</a></h4>
+                <p>Machine Learning</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-se wow fadeInUp" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/anime.jpg" class="img-fluid" alt="" width="500">
+                <a href="images/anime.jpg" class="link-preview" data-lightbox="portfolio" data-title="anime" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/Flatten-weebs-material" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/Flatten-weebs-material">Flatten weebs material</a></h4>
+                <p>Software Engineering</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-se wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="images/nus.jpg" class="img-fluid" alt="">
+                <a href="images/nus.jpg" class="link-preview" data-lightbox="portfolio" data-title="SG kopi" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="https://github.com/salmanhiro/Singapore-Coffe-Shop-Simulator-" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="https://github.com/salmanhiro/Singapore-Coffe-Shop-Simulator-">Singapore Coffee Shop</a></h4>
+                <p>Software Engineering</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+	-->
       </div>
     </section><!-- #portfolio -->
 
