--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li class="menu-active"><a href="#intro">Home</a></li>
           <li><a href="#about">About Me</a></li>
           <li><a href="#portfolio">Projects</a></li>
-          <li><a href="#writings">Writings</a></li>
+          <li><a href="https://blogs.itb.ac.id/salmanhiro/">Writings</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
