--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <header class="section-header">
           <h3>About Me</h3>
-          <p style="text-align:center;"><img src="images/pics.JPG" alt="" class="center" width="150"></p>
+          <p style="text-align:center;"><img src="images/pics.PNG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
           	I am a final year undergraduate at the Department of Astronomy, Institut Teknologi Bandung. At this moment, I am into galactic physics research and as teaching assistant. A good description of me: a box-to-box person, I want to learn anything.
           	<br><br>
