--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Welcome! Nice to meet you!</h2>
-                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, programming, IoT, machine learning, operating system, and information security.</p>
+                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, AI, and information security.</p>
                 This image was created using Neural Style Transfer Algorithm. 
                 <br>
                 Content image by Francisco Suarez at Unsplash, and style from transformyourlife.nl
