--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Welcome! Nice to meet you!</h2>
-                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, AI, and information security.</p>
+                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, AI, and artificial intelligence.</p>
                 This image was created using Neural Style Transfer Algorithm. 
                 <br>
-                Content image by Francisco Suarez at Unsplash, and style from transformyourlife.nl
+                Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl
               </div>
             </div>
           </div>
@@ -106,7 +106,8 @@
           	<h4>Experiences</h4>
           	Experience is key to upgrade myself. Here are some of them. 
           	<ul>
-          	<li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
+            <li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
+            <li>AI Researcher at ZAPPS AI (Spring 2020 - present)</li>
           	<li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
           	<li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
