--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-se wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="images/sdss_nav.jpg" class="img-fluid" alt="">
-                <a href="images/sdss_nav.jpg" class="link-preview" data-lightbox="portfolio" data-title="SDSS API" title="Preview"><i class="ion ion-eye"></i></a>
+                <img src="images/sdss_nav.png" class="img-fluid" alt="">
+                <a href="images/sdss_nav.png" class="link-preview" data-lightbox="portfolio" data-title="SDSS API" title="Preview"><i class="ion ion-eye"></i></a>
                 <a href="https://github.com/salmanhiro/SDSS-Imaging-API" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
