--- a/index.html
+++ b/index.html
@@ -101,20 +101,27 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.PNG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">Hi! I am Salman. 
-          	I am a final year undergraduate at the Department of Astronomy, Institut Teknologi Bandung. At this moment, I am into galactic physics research and as teaching assistant. A good description of me: a box-to-box person, I want to learn anything.
+            I am graduated from the Department of Astronomy, Institut Teknologi Bandung. 
+            At this moment, I am into galactic physics research and was a teaching assistant. A good description of me: a box-to-box person, I want to learn anything.
           	<br><br>
           	<h4>Experiences</h4>
-          	Experience is key to upgrade myself. Here are some of them. 
+          	Here are some of them. 
           	<ul>
             <li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
             <li>AI Researcher at ZAPPS AI (Spring 2020 - present)</li>
-          	<li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
+            <li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
+            <li>Football Statistician at Lapangbola (Winter-Spring 2020)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
-          	<li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
+            <li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
+            
+
           	</ul>
           	<br><br>
-          	<h4>Current Researches</h4>
+          	<h4>Ongoing Researches</h4>
           	<ul>
+            <li>Get Lucky: A Reinforcement Approach or A Greed Approach</li>li>
+            <li>Towards the Generative of Abstract Context Imaging </li>
+            <li>Online Competition Research </li>
           	<li>The use of Convolutional Neural Network (CNN) for SDSS APOGEE Stellar Parameter Analysis. </li>
           	<li>Galaxy Zoo: A public outreach to introduce galaxy classification to community. </li>
           	<li>The use of Deep Learning for GAIA-Besancon Galaxy Population. </li>
