--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Welcome! Nice to meet you!</h2>
-                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, AI, and artificial intelligence.</p>
+                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, information security, and artificial intelligence.</p>
                 This image was created using Neural Style Transfer Algorithm. 
                 <br>
                 Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl
@@ -100,24 +100,33 @@
         <header class="section-header">
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.PNG" alt="" class="center" width="150"></p>
-          <p style="text-align:left;">Hi! I am Salman. 
-            I am graduated from the Department of Astronomy, Institut Teknologi Bandung. 
-            At this moment, I am into galactic physics research and was a teaching assistant. A good description of me: a box-to-box person, I want to learn anything.
+          <p style="text-align:left;">
+            Simply, a coffee enthusiast. 
           	<br><br>
-          	<h4>Experiences</h4>
+          	<h4>Experience</h4>
           	Here are some of them. 
           	<ul>
             <li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
-            <li>AI Researcher at ZAPPS AI (Spring 2020 - present)</li>
+            <li>AI & HPC Researcher at ZAPPS AI (Spring 2020 - present)</li>
             <li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
             <li>Football Statistician at Lapangbola (Winter-Spring 2020)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
             <li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
+
+            <br><br>
+          	<h4>Education</h4>
+          	<ul>
+            <li>Bachelor of Science in Astronomy, Institut Teknologi Bandung (2016-2020)</li>
+            <li>Physics of Life Summer School, Princeton University (Summer 2020)</li>
+            <li>Machine Learning Summer School, co-organized by University of Amsterdam, Telkom University, INACL, and ELLIS (August 2020)</li>
+
+          
+          </ul>
             
 
           	</ul>
           	<br><br>
-          	<h4>Ongoing Researches</h4>
+          	<h4>Ongoing Research</h4>
           	<ul>
             <li>Get Lucky: A Reinforcement Approach or A Greed Approach</li>li>
             <li>Towards the Generative of Abstract Context Imaging </li>
@@ -132,7 +141,7 @@
           	I did several activities for fun and seeking the meaning of my life.
           	<ul>
           	<li>Researcher at Jakarta Machine Learning community. </li>
-          	<li>Leading a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
+          	<li>Lead a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
           	<li>Play basketball and football (I play as forward for both). </li>
           	<li>Participating in college robotics team, humanoid robot division.</li>
           	<li>Developing some random kinds of stuff</li>
