damn, typos everywhere

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Welcome! Nice to meet you!</h2>
-                <p>A final year Astrophysics student and research assistant at Institut Teknologi Bandung. A geek in astrophysics, mathematics, information security, and artificial intelligence.</p>
+                <p>Actually a geek in astrophysics, mathematics, information security, and artificial intelligence.</p>
                 This image was created using Neural Style Transfer Algorithm. 
                 <br>
                 Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl
@@ -112,7 +112,7 @@
             <li>Football Statistician at Lapangbola (Winter-Spring 2020)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
             <li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
-
+            </ul>
             <br><br>
           	<h4>Education</h4>
           	<ul>
@@ -128,7 +128,8 @@
           	<br><br>
           	<h4>Ongoing Research</h4>
           	<ul>
-            <li>Get Lucky: A Reinforcement Approach or A Greed Approach</li>li>
+            <li>PoliticsQ: a Reinforcement Approach for a Greed Approach</li>
+            <li>Mountain: a Computational Mathematics Personal AI Assistant </li>
             <li>Towards the Generative of Abstract Context Imaging </li>
             <li>Online Competition Research </li>
           	<li>The use of Convolutional Neural Network (CNN) for SDSS APOGEE Stellar Parameter Analysis. </li>
@@ -140,13 +141,14 @@
           	<h4>Activities</h4>
           	I did several activities for fun and seeking the meaning of my life.
           	<ul>
+          	<li>Part of NVIDIA developer program</li>
           	<li>Researcher at Jakarta Machine Learning community. </li>
           	<li>Lead a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
           	<li>Play basketball and football (I play as forward for both). </li>
           	<li>Participating in college robotics team, humanoid robot division.</li>
           	<li>Developing some random kinds of stuff</li>
           	<li>Astronomy public outreach (as the cool telescope dude).</li>
-          	<li>A kaggler, expert ranked</li>
+          	<li>A Kaggler, expert ranked</li>
           	</ul>
           	<br><br>
           	<h4>Achievements</h4>
