damn, typos everywhere

--- a/index.html
+++ b/index.html
@@ -151,7 +151,15 @@
           	<li>A Kaggler, expert ranked</li>
           	</ul>
           	<br><br>
-          	<h4>Achievements</h4>
+
+          	<h4>Publication</h4>
+          	<ul>
+          		<li>Dago Hoogeschool dalam Kontes Robot Sepak Bola Indonesia Humanoid 2018 (Dago Hoogeschool in Indonesia Humanoid Robot Contest 2018). ISRSC 2018 pp. 171-175. 
+          		</li>
+          	</ul>
+
+
+          	<h4>Achievement</h4>
           	Behold, fortunately I won (or got decent result) at some of competitions or been an awardee.
           	<ul>
           	<li>Top 9% at Categorical Encoding Challenge II Kaggle</li>
