damn, typos everywhere

--- a/index.html
+++ b/index.html
@@ -138,16 +138,18 @@
           	<li>The use of machine learning for Be Star spectra analysis.</li>
           </ul>
           	<br><br>
-          	<h4>Activities</h4>
+          	<h4>Activities and Communities</h4>
           	I did several activities for fun and seeking the meaning of my life.
           	<ul>
           	<li>Part of NVIDIA developer program</li>
-          	<li>Researcher at Jakarta Machine Learning community. </li>
-          	<li>Lead a collegiate information security team, Dragon Night, to compete in CTF competitions. </li>
-          	<li>Play basketball and football (I play as forward for both). </li>
-          	<li>Participating in college robotics team, humanoid robot division.</li>
+          	<li>NUS Hackers community </li>
+          	<li>SETI@Home computing volunteer</li>
+          	<li>Researcher at Jakarta Machine Learning community </li>
+          	<li>Lead a collegiate information security team, Dragon Night, to compete in CTF competitions </li>
+          	<li>Play basketball and football (I play as forward for both) </li>
+          	<li>Participating in college robotics team, humanoid robot division</li>
           	<li>Developing some random kinds of stuff</li>
-          	<li>Astronomy public outreach (as the cool telescope dude).</li>
+          	<li>Astronomy public outreach (as the cool telescope dude)</li>
           	<li>A Kaggler, expert ranked</li>
           	</ul>
           	<br><br>
