damn, typos everywhere

--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
             Simply, a coffee enthusiast. 
           	<br><br>
           	<h4>Experience</h4>
-          	Here are some of them. 
+          	Here are some of them since I graduated not as a fresh graduate. 
           	<ul>
             <li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
             <li>AI & HPC Researcher at ZAPPS AI (Spring 2020 - present)</li>
+            <li>Research Assistant at Department of Astronomy, ITB (Winter 2020 - present)
             <li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
             <li>Football Statistician at Lapangbola (Winter-Spring 2020)</li>
+            <li>Infrastructure Engineer at ComLabs ITB (2019)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
             <li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
             </ul>
