--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>Welcome! Nice to meet you!</h2>
-                <p>Actually a geek in astrophysics, mathematics, information security, and artificial intelligence.</p>
-                This image was created using Neural Style Transfer Algorithm. 
+                <p> Someone who loves good coffee, mountain, and universe.
                 <br>
                 Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl
               </div>
@@ -101,19 +100,15 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.PNG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">
-            Simply, a coffee enthusiast. 
           	<br><br>
-          	<h4>Experience</h4>
-          	Here are some of them since I graduated not as a fresh graduate. 
+          	<h4>Involvements</h4>
+          	
           	<ul>
-            <li>Researcher at <a href="https://jakartamachinelearning.com/">Jakarta Machine Learning</a></li>
-            <li>AI & HPC Researcher at ZAPPS AI (Spring 2020 - present)</li>
-            <li>Research Assistant at Department of Astronomy, ITB (Winter 2020 - present)
-            <li>Machine Learning Engineer Intern at Ignitus (Spring 2020)</li>
-            <li>Football Statistician at Lapangbola (Winter-Spring 2020)</li>
+            <li>AI Engineer internship at Konvergen AI (Summer 2021)
+            <li>AI Engineer at ZAPPS AI (Autumn 2021)</li>
+            <li>Research Assistant at Department of Astronomy, ITB (2020-2021)
             <li>Infrastructure Engineer at ComLabs ITB (2019)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
-            <li>Software Engineer at Dago Hoogeschool, ITB Humanoid Robotics Team (2017-2019)</li>
             </ul>
             <br><br>
           	<h4>Education</h4>
@@ -130,9 +125,7 @@
           	<br><br>
           	<h4>Ongoing Research</h4>
           	<ul>
-            <li>PoliticsQ: a Reinforcement Approach for a Greed Approach</li>
             <li>Mountain: a Computational Mathematics Personal AI Assistant </li>
-            <li>Towards the Generative of Abstract Context Imaging </li>
             <li>Online Competition Research </li>
           	<li>The use of Convolutional Neural Network (CNN) for SDSS APOGEE Stellar Parameter Analysis. </li>
           	<li>Galaxy Zoo: A public outreach to introduce galaxy classification to community. </li>
@@ -145,12 +138,10 @@
           	<ul>
           	<li>Part of NVIDIA developer program</li>
           	<li>NUS Hackers community </li>
-          	<li>SETI@Home computing volunteer</li>
+          	<li>SETI@Home computing volunteer. Yes, I am here for the aliens.</li>
           	<li>Researcher at Jakarta Machine Learning community </li>
           	<li>Lead a collegiate information security team, Dragon Night, to compete in CTF competitions </li>
-          	<li>Play basketball and football (I play as forward for both) </li>
           	<li>Participating in college robotics team, humanoid robot division</li>
-          	<li>Developing some random kinds of stuff</li>
           	<li>Astronomy public outreach (as the cool telescope dude)</li>
           	<li>A Kaggler, expert ranked</li>
           	</ul>
