--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 <h2>Welcome! Nice to meet you!</h2>
                 <p> Someone who loves good coffee, mountain, and universe.
                 <br>
-                Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl
+                <br>
+                <small>Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl </small>
               </div>
             </div>
           </div>
