--- a/index.html
+++ b/index.html
@@ -101,16 +101,15 @@
           <h3>About Me</h3>
           <p style="text-align:center;"><img src="images/pics.PNG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">
-          	<br>
 
-            <h4>Fun facts</h4>>
+            <h4>Fun facts</h4>
             <ul>
               <li> I want to know about mycology </li>>
               <li> I like to play basketball and robot </li>
               <li> I spend my weekend at mountain </li>
               <li> I listen to indie music </li>
 
-            </ul>>
+            </ul>
           	<h4>Involvements</h4>
           	
           	<ul>
