--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p> Someone who loves good coffee, mountain, and universe.
                 <br>
                 <br>
-                <small>Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl </small>
+                <small><i>Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl </i></small>
               </div>
             </div>
           </div>
@@ -102,12 +102,13 @@
           <p style="text-align:center;"><img src="images/pics.PNG" alt="" class="center" width="150"></p>
           <p style="text-align:left;">
 
-            <h4>Fun facts</h4>
+            <h4>5 Fun Facts</h4>
             <ul>
               <li> I want to know about mycology </li>>
-              <li> I like to play basketball and robot </li>
+              <li> I like to play basketball and observe ants </li>
               <li> I spend my weekend at mountain </li>
               <li> I listen to indie music </li>
+              <li> I read medical books </li>
 
             </ul>
           	<h4>Involvements</h4>
