--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <h4>5 Fun Facts</h4>
             <ul>
-              <li> I want to know about mycology </li>>
+              <li> I want to know about mycology </li>
               <li> I like to play basketball and observe ants </li>
               <li> I spend my weekend at mountain </li>
               <li> I listen to indie music </li>
