--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           	<h4>Involvements</h4>
           	
           	<ul>
+            <li>Chief Data Officer at Allure AI (2021-)
             <li>AI Engineer internship at Konvergen AI (Summer 2021)
             <li>AI Engineer at ZAPPS AI (Autumn 2021)</li>
             <li>Research Assistant at Department of Astronomy, ITB (2020-2021)
