--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <li>Infrastructure Engineer at ComLabs ITB (2019)</li>
           	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
             </ul>
-            <br><br>
+            <br>
           	<h4>Education</h4>
           	<ul>
             <li>Bachelor of Science in Astronomy, Institut Teknologi Bandung (2016-2020)</li>
@@ -127,10 +127,9 @@
             <li>Machine Learning Summer School, co-organized by University of Amsterdam, Telkom University, INACL, and ELLIS (August 2020)</li>
 
           </ul>
-            
 
           	</ul>
-          	<br><br>
+          	<br>
           	<h4>Ongoing Research</h4>
           	<ul>
             <li>Mountain: a Computational Mathematics Personal AI Assistant </li>
@@ -140,7 +139,7 @@
           	<li>The use of Deep Learning for GAIA-Besancon Galaxy Population. </li>
           	<li>The use of machine learning for Be Star spectra analysis.</li>
           </ul>
-          	<br><br>
+          	<br>
           	<h4>Activities and Communities</h4>
           	I did several activities for fun and seeking the meaning of my life.
           	<ul>
@@ -153,18 +152,20 @@
           	<li>Astronomy public outreach (as the cool telescope dude)</li>
           	<li>A Kaggler, expert ranked</li>
           	</ul>
-          	<br><br>
+          	<br>
 
           	<h4>Publication</h4>
           	<ul>
           		<li>Dago Hoogeschool dalam Kontes Robot Sepak Bola Indonesia Humanoid 2018 (Dago Hoogeschool in Indonesia Humanoid Robot Contest 2018). ISRSC 2018 pp. 171-175. 
           		</li>
           	</ul>
+            <br>
 
 
           	<h4>Achievement</h4>
           	Behold, fortunately I won (or got decent result) at some of competitions or been an awardee.
           	<ul>
+            <li>2nd Prize of Intel OpenVINO Computer Vision Hackathon 2020 </li>
           	<li>Top 9% at Categorical Encoding Challenge II Kaggle</li>
           	<li>Indosat Ooredo IDCamp 2020 scholarship awardee, machine learning developer track. </li>
           	<li>3rd prize of Indonesia Robotics Contest, national stage humanoid division 2018.</li>
