--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="carousel-background"><img src="images/osaka.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2>Welcome! Nice to meet you!</h2>
+                <h2>Hæ, Velkominn!</h2>
                 <p> Someone who loves good coffee, mountain, and universe.
                 <br>
                 <br>
