--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p> Someone who loves good coffee, mountain, and universe.
                 <br>
                 <br>
-                <small><i>Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl </i></small>
+                <small><i>This is computer generated style painting. Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl </i></small>
               </div>
             </div>
           </div>
