--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <li> I want to know about mycology </li>
               <li> I like to play basketball and observe ants </li>
               <li> I spend my weekend at mountain </li>
-              <li> I listen to indie music </li>
+              <li> I listen to indie musics </li>
               <li> I read medical books </li>
 
             </ul>
