--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a href="#about">About Me</a></li>
           <li><a href="#portfolio">Projects</a></li>
           <li><a href="https://hiromathknight.medium.com/">Writings</a></li>
+          <li><a href="https://www.goodreads.com/salmanhiro10">Readings</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
