--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <li><a href="#about">About Me</a></li>
           <li><a href="#portfolio">Projects</a></li>
           <li><a href="https://hiromathknight.medium.com/">Writings</a></li>
+          <li><a href="https://www.goodreads.com/salmanhiro10">Readings</a></li>
           <li><a href="https://thekintsugi.github.io/">Kintsugi</a></li>
 
         </ul>
@@ -83,8 +84,6 @@
                 <p> Someone who loves good coffee, mountain, and universe.
                 
 
-
-                
                   <br>
                 <br>
                 <small><i>This is computer generated style painting. Content image by Francisco Suarez at Unsplash and style from transformyourlife.nl </i></small>
@@ -110,9 +109,9 @@
           <p style="text-align:left;">
             <h4>5 Fun Facts</h4>
             <ul>
-              <li> I want to know about mycology </li>
+              <li> I want to know about neuroscience </li>
               <li> I like to play basketball and observe ants </li>
-              <li> I spend my weekend at mountain </li>
+              <li> I often spend my weekend at mountain </li>
               <li> I listen to indie musics </li>
               <li> I read medical books </li>
 
@@ -125,7 +124,7 @@
             <li>AI Engineer at ZAPPS AI (Autumn 2021)</li>
             <li>Research Assistant at Department of Astronomy, ITB (2020-2021)
             <li>Infrastructure Engineer at ComLabs ITB (2019)</li>
-          	<li>Data Scientist Intern at Chatbiz.id (Summer 2019)</li>
+          	<li>Software Engineer Intern at Chatbiz.id (Summer 2019)</li>
             </ul>
             <br>
           	<h4>Education</h4>
